--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                    
+                                                                                                                        
     
     
     
@@ -27,8 +27,10 @@
     
     
     
-    <wb-module deploy-name="Acme-Toolkits-22.3">
-                                                                                                                                                                                                                                        
+    
+    <wb-module deploy-name="Acme-Toolkits-22.2">
+                                                                                                                                                                                                                                                
+        
         
         
         
@@ -57,7 +59,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                        
+        
         
         
         
@@ -85,7 +88,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                        
+        
         
         
         
@@ -113,49 +117,6 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
-                                                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
                                                                                                                                                                                                                                 
         
         
@@ -183,13 +144,64 @@
         
         
         
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
+                                                                                                                                
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+                                                                                                                                                                                                                                        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                                        
+                                                
+        
         
         
         
         <property name="context-root" value="Acme-Toolkits"/>
-                                                                                                                                                                                                                                    
+                                                                                                                                                                                                                                            
+    
     
     
     
@@ -218,7 +230,8 @@
     
     
     </wb-module>
-                                                                                                                
+                                                                                                                    
+
 
 
 
